Kubernetes/services.yaml
#SongsInk
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songsinkapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: songsinkapi
  template:
    metadata:
      labels:
        app: songsinkapi
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: songsinkapi
        image: 210628utanet/songsinkapi:latest
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: songsinkapi
spec:
  ports:
    - targetPort: 80
      port: 5001
  selector:
    app: songsinkapi
---
#songsinksocket
apiVersion: apps/v1
kind: Deployment
metadata:
  name: songsinksocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: songsinksocket
  template:
    metadata:
      labels:
        app: songsinksocket
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: songsinksocket
        image: 210628utanet/songsinksocket:latest
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: songsinksocket
spec:
  ports:
    - targetPort: 3000
      port: 5002
  selector:
    app: songsinksocket
---

#Battleship
apiVersion: apps/v1
kind: Deployment
metadata:
  name: battleship
spec:
  replicas: 1
  selector:
    matchLabels:
      app: battleship
  template:
    metadata:
      labels:
        app: battleship
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: battleship
        image: 210628utanet/battleship:latest
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: battleship
spec:
  ports:
    - targetPort: 5000
      port: 6001
  selector:
    app: battleship
---
#battleshipsocket
apiVersion: apps/v1
kind: Deployment
metadata:
  name: battleshipsocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: battleshipsocket
  template:
    metadata:
      labels:
        app: battleshipsocket
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: battleshipsocket
        image: 210628utanet/battleshipsocket:latest
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: battleshipsocket
spec:
  ports:
    - targetPort: 3000
      port: 6002
  selector:
    app: battleshipsocket
---

#dotnetroyale
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetroyale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnetroyale
  template:
    metadata:
      labels:
        app: dotnetroyale
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: dotnetroyale
        image: 210628utanet/dotnetroyale:latest
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: dotnetroyale
spec:
  ports:
    - targetPort: 5000
      port: 7001
  selector:
    app: dotnetroyale
---
#dotnetroyalesocket
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetroyalsocket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnetroyalsocket
  template:
    metadata:
      labels:
        app: dotnetroyalsocket
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: dotnetroyalsocket
        image: 210628utanet/dotnetroyalsocket:latest
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: dotnetroyalsocket
spec:
  ports:
    - targetPort: 3000
      port: 7002
  selector:
    app: dotnetroyalsocket
---
#hubapi
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hubapi
  template:
    metadata:
      labels:
        app: hubapi
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: hubapi
        image: 210628utanet/hubapi:latest
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: hubapi
spec:
  ports:
    - targetPort: 5000
      port: 8001
  selector:
    app: hubapi
---
#hubui
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamehubui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gamehubui
  template:
    metadata:
      labels:
        app: gamehubui
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: gamehubui
        image: 210628utanet/gamehubui:latest
        imagePullPolicy: "Always"
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: gamehubui
spec:
  type: LoadBalancer
  ports:
    - targetPort: 80
      port: 8002
  selector:
    app: gamehubui
---
