Kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restrev-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # to use regex on my paths
    nginx.ingress.kubernetes.io/use-regex: "true"
    # also something about the path, rewriting the target, modifying the url
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - http:
        paths:
        # Songs Ink
          - path: /songsinkapi/?(.*)
            pathType: Prefix
            backend:
              service:
                name: songsinkapi
                port:
                  number: 5001
          #Songs Ink Socket
          - path: /songsinksocket/?(.*)
            pathType: Prefix
            backend:
              service:
                name: songsinksocket
                port:
                  number: 5002
          #Battleship
          - path: /battleshipapi/?(.*)
            pathType: Prefix
            backend:
              service:
                name: battleship
                port:
                  number: 6001
          #Battleship Socket
          - path: /battleshipsocket/?(.*)
            pathType: Prefix
            backend:
              service:
                name: battleshipsocket
                port:
                  number: 6002
          #dotnetroyale
          - path: /dotnetroyaleapi/?(.*)
            pathType: Prefix
            backend:
              service:
                name: dotnetroyale
                port:
                  number: 7001
          #dotnetroyale Socket
          - path: /dotnetroyalesocket/?(.*)
            pathType: Prefix
            backend:
              service:
                name: dotnetroyalsocket
                port:
                  number: 7002
          #hubapi
          - path: /hubapi/?(.*)
            pathType: Prefix
            backend:
              service:
                name: hubapi
                port:
                  number: 8001
